services/audioshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audioshelf
  namespace: default
  labels:
    app: audioshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audioshelf
  template:
    metadata:
      labels:
        app: audioshelf
    spec:
      containers:
        - image: ghcr.io/advplyr/audiobookshelf:latest
          imagePullPolicy: Always
          name: audioshelf
          resources: {}
          ports:
            - name: audioshelf
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: audioshelf
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: host-disk1
              mountPath: /config
              subPath: audioshelf
            - name: nfs-vol-disk2
              mountPath: /disk2
            - name: nfs-vol-disk3
              subPath: audiobooks
              mountPath: /audiobooks
            - name: nfs-vol-disk3
              subPath: podcasts
              mountPath: /podcasts
            - name: nfs-vol-disk3
              subPath: audioshelfmetadata
              mountPath: /metadata
      volumes:
        - name: host-disk1
          hostPath:
            path: /disk1
        - name: nfs-vol-disk2
          nfs:
            server: 192.168.1.2
            path: /disk2
        - name: nfs-vol-disk3
          nfs:
            server: 192.168.1.2
            path: /disk3
      restartPolicy: Always
status: {}
