services/audioshelf/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: audioshelf
  namespace: default
spec:
  selector:
    app: audioshelf
  ports:
    - port: 80
      targetPort: audioshelf
